--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -130,7 +130,7 @@
 /* вот этот стиль центрирует по горизонтали. пробуем */
   display: flex;
   flex-direction: column;
-  align-items: center; /* вот этот стиль центрирует по горизонтали */
+  align-items: left; /* вот этот стиль центрирует по горизонтали */
 }
 .order-row {
   font-size: 17px;
