--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -116,6 +116,9 @@
   display: inline-block;
   vertical-align: middle;
   letter-spacing: 1px;
+  
+  display: flex;
+  align-items: center;
 }
 
 
@@ -150,7 +153,7 @@
   margin-top: 4px;
   font-size: 17px;
   font-weight: 600;
-  text-align: left
+  text-align: left;
 }
 .order-flavor-img {
   width: 21px;
